-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b16
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8264476 | 11.0.12-oracle | Dukebot | P4 | Resolved | Fixed | b01 |
| JDK-8264922 | 11.0.12 | Igor Veresov | P4 | Resolved | Fixed | b01 |
ciMethodData::load_data() can set the state of the MDO to empty (if it's replaying a compile). In this case we should return false from ensure_method_data().
- backported by
-
JDK-8264476 ciMethod::ensure_method_data() should return false is loading resulted in empty state
-
- Resolved
-
-
JDK-8264922 ciMethod::ensure_method_data() should return false is loading resulted in empty state
-
- Resolved
-
- relates to
-
JDK-8254106 Improve compilation replay
-
- Resolved
-