8264151: ciMethod::ensure_method_data() should return false is loading resulted in empty state

Reviewed-by: dlong, kvn